//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "shared/v1/metadata_type.proto";

// Contains the details about order that are available only for the system.
message ClusterOrder {
  // Unique identifier of the order.
  string id = 1;

  shared.v1.Metadata metadata = 2;

  // Identifier of the hub that was selected for this order.
  string hub_id = 3;
}
