//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/any.proto";
import "private/v1/cluster_template_type.proto";
import "private/v1/cluster_type.proto";
import "private/v1/host_class_type.proto";
import "private/v1/hub_type.proto";

// Represents events delivered by the server.
message Event {
  // Unique identifier of the event.
  string id = 1;

  // Type of event.
  EventType type = 2;

  // Payload of the event.
  oneof payload {
    Cluster cluster = 3;
    ClusterTemplate cluster_template = 4;
    HostClass host_class = 5;
    Hub hub = 6;
  }
}

enum EventType {
  // Unspecified means that the even type is unknown.
  EVENT_TYPE_UNSPECIFIED = 0;

  // Means that a new object has been created.
  //
  // The payload will contain the representation of the object.
  EVENT_TYPE_OBJECT_CREATED = 1;

  // Means that an existing object has been modified.
  //
  // The payload will contain the updated representation of the object.
  EVENT_TYPE_OBJECT_UPDATED = 2;

  // Means that an object has been deleted.
  //
  // The payload will contain the representation of the object right before it was deleted.
  EVENT_TYPE_OBJECT_DELETED = 3;
}
